update social ids

--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,15 +10,33 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://github.com/wmbm"
 
 [social.params]
 icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "linkedin"
+name = "LinkedIn"
+url = "https://linkedin.com/in/william-baker-morrison"
 
 [social.params]
-icon = "brand-twitter"
+icon = "brand-linkedin"
+
+[[social]]
+identifier = "kaggle"
+name = "Kaggle"
+url = "https://kaggle.com/wilomentena"
+
+[social.params]
+icon = "brand-kaggle"
+
+[[social]]
+identifier = "stackoverflow"
+name = "StackOverFlow"
+url = "https://stackoverflow.com/users/4320101/william-baker-morrison"
+
+[social.params]
+icon = "brand-stackoverflow"
+
+
