--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -21,7 +21,7 @@ name = "LinkedIn"
 url = "https://linkedin.com/in/william-baker-morrison"
 
 [social.params]
-icon = "brand-linkedin"
+icon = "linkedin"
 
 [[social]]
 identifier = "kaggle"
@@ -37,6 +37,6 @@ name = "StackOverFlow"
 url = "https://stackoverflow.com/users/4320101/william-baker-morrison"
 
 [social.params]
-icon = "brand-stackoverflow"
+icon = "stackoverflow"
 
 
