--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -13,7 +13,7 @@ name = "GitHub"
 url = "https://github.com/wmbm"
 
 [social.params]
-icon = "brand-github"
+icon = "github"
 
 [[social]]
 identifier = "linkedin"
