add favicon details to config

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,3 +14,11 @@ hasCJKLanguage = false
 
 # Change it to your Disqus shortname before using
 disqusShortname = "hugo-theme-stack"
+
+[assets]
+disableHLJS = true 
+favicon = "/assets/favicons/favicon.ico"
+favicon16x16 = "/assets/favicons/favicon-16x16.pmg"
+favicon32x32 = "/assets/favicons/favicon-32x32.png"
+apple_touch_icon = "/assets/favicons/apple-touch-icon.png"
+#android_chrome19 = "/assets/favicons/android-chrome-192x192.png"
