--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -17,7 +17,7 @@ disqusShortname = "hugo-theme-stack"
 
 [assets]
 disableHLJS = true 
-favicon = "/assets/favicons/favicon.ico"
+favicon = "/assets/favicons/favicon.png"
 favicon16x16 = "/assets/favicons/favicon-16x16.pmg"
 favicon32x32 = "/assets/favicons/favicon-32x32.png"
 apple_touch_icon = "/assets/favicons/apple-touch-icon.png"
