change params ref to favicon

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,8 +1,9 @@
 # Pages placed under these sections will be shown on homepage and archive page.
 mainSections = ["post"]
+
 # Output page's full content in RSS.
 rssFullContent = true
-favicon = "/favicon.png"
+favicon = "assets/favicons/favicon.io"
 
 [footer]
 since = 2020
