--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,11 +6,10 @@ rssFullContent = true
 
 [assets]
 disableHLJS = true 
-favicon = "/assets/favicons/favicon.ico" 
-favicon16x16 = "/assets/favicons/favicon-16x16.png"
-favicon32x32 = "/assets/favicons/favicon-32x32.png"
-apple_touch_icon = "/assets/favicons/apple-touch-icon.png"
-#android_chrome19 = "/assets/favicons/android-chrome-192x192.png"
+favicon = "assets/favicons/favicon.ico"  
+favicon16x16 = "assets/favicons/favicon-16x16.png"
+favicon32x32 = "assets/favicons/favicon-32x32.png"
+apple_touch_icon = "assets/favicons/apple-touch-icon.png"
 
 [footer]
 since = 2020
