--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,13 +3,8 @@ mainSections = ["post"]
 
 # Output page's full content in RSS.
 rssFullContent = true
+# favicon
 
-[assets]
-disableHLJS = true 
-favicon = "assets/favicons/favicon.ico"  
-favicon16x16 = "assets/favicons/favicon-16x16.png"
-favicon32x32 = "assets/favicons/favicon-32x32.png"
-apple_touch_icon = "assets/favicons/apple-touch-icon.png"
 
 [footer]
 since = 2020
