--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -15,8 +15,9 @@ hasCJKLanguage = false
 # Change it to your Disqus shortname before using
 disqusShortname = "hugo-theme-stack"
 
-# Favicons
-favicon = "favicon.ico"  
-favicon16x16 = "favicon-16x16.png"
-favicon32x32 = "favicon-32x32.png"
-apple_touch_icon = "apple-touch-icon.png"
+[params]
+    # Favicons
+    favicon = "favicon.ico"  
+    favicon16x16 = "favicon-16x16.png"
+    favicon32x32 = "favicon-32x32.png"
+    apple_touch_icon = "apple-touch-icon.png"
