--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,8 +3,7 @@ mainSections = ["post"]
 
 # Output page's full content in RSS.
 rssFullContent = true
-# favicon
-
+favicon = "favicon.png"
 
 [footer]
 since = 2020
