--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@ mainSections = ["post"]
 
 # Output page's full content in RSS.
 rssFullContent = true
-favicon = "/static/favicon.png"
+favicon = "/static/favicon.ico"
 
 [footer]
 since = 2020
