update params to cactus

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -77,7 +77,7 @@ enabled = true
 ## Comments
 [comments]
 enabled = true
-provider = "disqus"
+provider = "cactus"
 
 [comments.disqusjs]
 shortname = ""
@@ -125,7 +125,7 @@ lang = ""
 [comments.cactus]
 defaultHomeserverUrl = "https://matrix.cactus.chat:8448"
 serverName = "cactus.chat"
-siteName = ""
+siteName = "willsblog"
 
 [comments.giscus]
 repo = ""
