update chat config

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -125,7 +125,7 @@ lang = ""
 [comments.cactus]
 defaultHomeserverUrl = "https://matrix.cactus.chat:8448"
 serverName = "cactus.chat"
-siteName = "willsblog"
+siteName = "willsblogpage"
 
 [comments.giscus]
 repo = ""
