--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,3 +14,7 @@ hasCJKLanguage = false
 
 # Change it to your Disqus shortname before using
 disqusShortname = "hugo-theme-stack"
+	
+
+
+enableEmoji = true
